# virtual-network-interface

./: .cproject  .gitignore  .project  CMakeLists.txt  LICENSE  build_all.sh  clean_all.sh  make_install.sh
codegen/: AST.h  Backend.h  CRC64.h  Compiler.h  Parser.h  VNIParser.h
codegen/cpp/: .gitignore  CMakeLists.txt  Generator.h  vnicppcodegen.cpp
codegen/test/: .gitignore  CMakeLists.txt  Makefile  test_AST.cpp  test_module.cpp  test_vni_parser.cpp
cpp/include/vni/: Array.h  Binary.h  Class.h  Client.h  Downlink.h  Frame.h  Generic.h  GlobalPool.h  Interface.h  Interface.hxx  List.h  Module.h  Node.h  Object.h  Pointer.h  Pool.h  Port.h  Recorder.h  Sample.h  Server.h  String.h  Struct.h  TcpClient.h  TcpServer.h  Type.h  Type.hxx  Uplink.h  Value.h
cpp/interface/test/: TestDomain.vni  TestNode.vni  TestType.vni  Value.vni  Vector.vni
cpp/interface/vni/: List.vni  Node.vni  Object.vni  Topic.vni
include/: CRC64.h  Parser.h
interface/test/: TestNode.vni  TestType.vni  TestValue.vni  Value.vni
interface/vni/: Announce.vni  Array.vni  Binary.vni  Bool.vni  Call.vni  Class.vni  Client.vni  ConstCall.vni  Domain.vni  Field.vni  GenericValue.vni  Instance.vni  Integer.vni  Interface.vni  List.vni  Method.vni  Module.vni  Node.vni  Object.vni  Parameter.vni  Process.vni  Real.vni  Request.vni  String.vni  Topic.vni  Value.vni
interface/vni/info/: Announce.vni  Class.vni  Domain.vni  Field.vni  Object.vni  Parameter.vni  Process.vni  Request.vni
interface/vni/reflect/: Class.vni  Field.vni
interface/vnl/: Process.vni  Uplink.vni
(+1 files in other folders)
